[gd_scene load_steps=7 format=3 uid="uid://bu8xd8nx8gskh"]

[ext_resource type="Script" path="res://Components/UI/tooltip.gd" id="1_b8qym"]
[ext_resource type="StyleBox" uid="uid://caem40fgw51us" path="res://Assets/styles and themes/panel_wood.tres" id="2_xiitw"]
[ext_resource type="Texture2D" uid="uid://c4i0k6ji0urdt" path="res://Assets/3rd party/ui/medieval game ui/close button.png" id="3_icn3y"]

[sub_resource type="LabelSettings" id="LabelSettings_13lwv"]
font_size = 32
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_0knf0"]
color = Color(0.862745, 0.972549, 0, 1)
grow_begin = -5.0
grow_end = -10.0
thickness = 5

[sub_resource type="LabelSettings" id="LabelSettings_su1fq"]
font_size = 24
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Tooltip" type="CanvasLayer"]
script = ExtResource("1_b8qym")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -167.0
offset_right = 194.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_xiitw")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Header"
label_settings = SubResource("LabelSettings_13lwv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_0knf0")

[node name="Description" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Quality: ...
Description: ..."
label_settings = SubResource("LabelSettings_su1fq")
autowrap_mode = 3

[node name="Temperature" type="Label" parent="PanelContainer/MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Temperature: ..."
label_settings = SubResource("LabelSettings_su1fq")
autowrap_mode = 3

[node name="CloseButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(30, 30)
offset_left = 797.0
offset_top = 185.0
offset_right = 827.0
offset_bottom = 215.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_icn3y")
texture_pressed = ExtResource("3_icn3y")
ignore_texture_size = true
stretch_mode = 0

[connection signal="mouse_entered" from="CloseButton" to="." method="_on_close_button_mouse_entered"]
[connection signal="mouse_exited" from="CloseButton" to="." method="_on_close_button_mouse_exited"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
